tests/neg/named-tuples.check
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:13:25 ------------------------------------------------------
13 |  val y: (String, Int) = person // error
   |                         ^^^^^^
   |                         Found:    (Test.person : (name: String, age: Int))
   |                         Required: (String, Int)
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:14:20 ------------------------------------------------------
14 |  val _: NameOnly = person // error
   |                    ^^^^^^
   |                    Found:    (Test.person : (name: String, age: Int))
   |                    Required: Test.NameOnly
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:15:18 ------------------------------------------------------
15 |  val _: Person = nameOnly // error
   |                  ^^^^^^^^
   |                  Found:    (Test.nameOnly : (name: String))
   |                  Required: Test.Person
   |
   | longer explanation available when compiling with `-explain`
-- [E007] Type Mismatch Error: tests/neg/named-tuples.scala:17:36 ------------------------------------------------------
17 |  val _: (age: Int, name: String) = person // error
   |                                    ^^^^^^
   |                                    Found:    (Test.person : (name: String, age: Int))
   |                                    Required: (age: Int, name: String)
   |
   | longer explanation available when compiling with `-explain`
-- Error: tests/neg/named-tuples.scala:20:10 ---------------------------------------------------------------------------
20 |    case (name = n, age = a) => () // error // error
   |          ^^^^^^^^
   |          No element named `name` is defined
-- Error: tests/neg/named-tuples.scala:20:20 ---------------------------------------------------------------------------
20 |    case (name = n, age = a) => () // error // error
   |                    ^^^^^^^
   |                    No element named `age` is defined
-- Error: tests/neg/named-tuples.scala:25:9 ----------------------------------------------------------------------------
25 |  person ++ (1, 2) match // error
   |  ^^^^^^^^^^^^^^^^
   | Illegal combination of named and unnamed tuple elements in expression's type (name: String, age: Int, Int, Int)
-- Error: tests/neg/named-tuples.scala:28:17 ---------------------------------------------------------------------------
28 |  val bad = ("", age = 10) // error
   |                 ^^^^^^^^
   |                 Illegal combination of named and unnamed tuple elements
-- Error: tests/neg/named-tuples.scala:31:20 ---------------------------------------------------------------------------
31 |    case (name = n, age) => () // error
   |                    ^^^
   |                    Illegal combination of named and unnamed tuple elements
-- Error: tests/neg/named-tuples.scala:32:16 ---------------------------------------------------------------------------
32 |    case (name, age = a) => () // error
   |                ^^^^^^^
   |                Illegal combination of named and unnamed tuple elements
